Fix: Notifications overlapping   - The timer notification will now move above the deletion confirmation pop-up if the notifications are visible simultaneously.   - The note's title will now appear inside the deletion confirmation pop-up for clarity.   - Removed the toLowerCase() from stripHtml function to support the addition of note's title to the deletion confirmation pop-up.   - Fixed an instance of toLocaleLowerCase() to toLowerCase().   - Minor UI tweaks.

--- a/svelte/src/routes/app.css
+++ b/svelte/src/routes/app.css
@@ -861,6 +861,10 @@
   border-radius: 8px;
 }
 
+#mainViewTimerFinishedContainer.raised {
+  bottom: 210px;
+}
+
 #mainViewTimerNotificationContainer, #deleteNotificationContent {
   display: flex;
   flex: 1 1 0;
